# zh-token-compressor

./: .gitignore  README.md  pyproject.toml
examples/: benchmark.csv  config.json  paragraph.txt  profile.json  sentences.txt  train_pairs.csv
tests/: test_compressor.py
token_compressor/: __init__.py  benchmark.py  cli.py  compressor.py  domains.py
token_compressor/domain_configs/: __init__.py  business.json  education.json  finance.json  general.json  legal.json  medical.json  product.json  report.json  tech.json
